# http-api-foundation

./: README.md  pyproject.toml
httpapifoundation/: bootstrapper.py
httpapifoundation/authorization/: abstract.py
httpapifoundation/event_bus/: abstract.py
httpapifoundation/http/: abstract.py  abstract_route.py  exception_handler.py  route_details.py
